# Fast_InsertionSort

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_sort.py
fastsort/: __init__.py  fastsort.cpp
